[gd_scene load_steps=2 format=3]

[ext_resource path="res://addons/test_runner_gui/TestRunnerDock.gd" type="Script" id=1]

[node name="TestRunnerDock" type="VBoxContainer"]
script = ExtResource(1)
size_flags_vertical = 3

[node name="Options" type="GridContainer" parent="."]
columns = 2

[node name="NoColor" type="CheckBox" parent="Options"]
text = "No Color (--no-color)"

[node name="OutDirLabel" type="Label" parent="Options"]
text = "Output Dir (--out-dir)"

[node name="OutDir" type="LineEdit" parent="Options"/]

[node name="NoJson" type="CheckBox" parent="Options"]
text = "No JSON (--no-json)"

[node name="NoXml" type="CheckBox" parent="Options"]
text = "No XML (--no-xml)"

[node name="Simple" type="CheckBox" parent="Options"]
text = "Simple (--simple)"

[node name="BatchSizeLabel" type="Label" parent="Options"]
text = "Batch Size (--batch-size)"

[node name="BatchSize" type="SpinBox" parent="Options"]
min_value = 0
max_value = 1000

[node name="SlowLabel" type="Label" parent="Options"]
text = "Slow Threshold (--slow)"

[node name="Slow" type="SpinBox" parent="Options"]
min_value = 0
max_value = 10000
value = 5

[node name="RetriesLabel" type="Label" parent="Options"]
text = "Retries (--retries)"

[node name="Retries" type="SpinBox" parent="Options"]
min_value = 0
max_value = 10

[node name="TagsLabel" type="Label" parent="Options"]
text = "Tags (--tags)"

[node name="Tags" type="LineEdit" parent="Options"/]

[node name="SkipLabel" type="Label" parent="Options"]
text = "Skip (--skip)"

[node name="Skip" type="LineEdit" parent="Options"/]

[node name="PriorityLabel" type="Label" parent="Options"]
text = "Priority (--priority)"

[node name="Priority" type="LineEdit" parent="Options"/]

[node name="OwnerLabel" type="Label" parent="Options"]
text = "Owner (--owner)"

[node name="Owner" type="LineEdit" parent="Options"/]

[node name="RunButton" type="Button" parent="."]
text = "Run Tests"

[node name="Output" type="TextEdit" parent="."]
read_only = true
v_size_flags = 3
